--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -10,8 +10,8 @@
       <div class="owl-banner owl-carousel">
         <div class="banner-item-01">
           <div class="text-content">
-            <h4>Your GREEN option for car rentals</h4>
-            <h2>We are here for you!</h2>
+            <h4 class="shad">Your GREEN option for car rentals</h4>
+            <h2 class="shad">We are here for you!</h2>
           </div>
         </div>
         
@@ -28,36 +28,42 @@
               <a href="offers.html">view more <i class="fa fa-angle-right"></i></a>
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-4" style="max-width: 400px;">
             <div class="product-item">
-              <a href="offers.html"><img src="{% static 'images/offer-1-370x270.jpg' %}" alt=""></a>
+              <a href="offers.html"><img src="{% static 'images/2021-BMW-i3.jpeg' %}" alt=""></a>
               <div class="down-content">
-                <a href="offers.html"><h4>Lorem ipsum dolor sit amet, consectetur</h4></a>
-                <h6><small>from</small> $120 <small>per weekend</small></h6>
-                <p>Lorem ipsume dolor sit amet, adipisicing elite. Itaque, corporis nulla aspernatur.</p>
+                <a href="offers.html"><h4>BMW i3</h4></a>
+                <h6><small>only</small> $39 <small>per day</small></h6>
+                <p>Passengers: <i class="fas fa-user"></i> <i class="fas fa-user"></i> <i class="fas fa-user"></i> <i class="fas fa-user"></i></p>
+                <p class="luggage">Luggage: 🧳  <small>💼 💼</small></p>
+                <p>Range: 153 mi *battery only</p>
               </div>
             </div>
           </div>
-
-          <div class="col-md-4">
+          
+          <div class="col-md-4" style="max-width: 400px;">
             <div class="product-item">
-              <a href="offers.html"><img src="{% static 'images/offer-2-370x270.jpg' %}" alt=""></a>
+              <a href="offers.html"><img src="{% static 'images/2021-Hyundai-Ioniq.jpeg' %}" alt=""></a>
               <div class="down-content">
-                <a href="offers.html"><h4>Estorum aspernatur officiis accusamus </h4></a>
-                <h6><small>from</small> $150 <small>per weekend</small></h6>
-                <p>Lorem ipsume dolor sit amet, adipisicing elite. Itaque, corporis nulla aspernatur.</p>
+                <a href="offers.html"><h4>Hyundai Ioniq</h4></a>
+                <h6><small>only</small> $49 <small>per day</small></h6>
+                <p>Passengers: <i class="fas fa-user"></i> <i class="fas fa-user"></i> <i class="fas fa-user"></i> <i class="fas fa-user"></i> <i class="fas fa-user"></i></p>
+                <p class="luggage">Luggage: 🧳 🧳  <small>💼 💼</small></p>
+                <p>Range: 170 mi *battery only</p>
               </div>
             </div>
           </div>
-
-          <div class="col-md-4">
+          
+          <div class="col-md-4" style="max-width: 400px;">
             <div class="product-item">
-              <a href="offers.html"><img src="{% static 'images/offer-3-370x270.jpg' %}" alt=""></a>
+              <a href="offers.html"><img src="{% static 'images/2021-Audi-e-Tron.jpeg' %}" alt=""></a>
               <div class="down-content">
-                <a href="offers.html"><h4>Reiciendis ullam culpa optio providen</h4></a>
-                <h6><small>from</small> $150 <small>per weekend</small></h6>
-                <p>Lorem ipsume dolor sit amet, adipisicing elite. Itaque, corporis nulla aspernatur.</p>
-              </div>
+                <a href="offers.html"><h4>AUDI e-tron</h4></a>
+                <h6><small>only</small> $89 <small>per day</small></h6>
+                <p>Passengers: <i class="fas fa-user"></i> <i class="fas fa-user"></i> <i class="fas fa-user"></i> <i class="fas fa-user"></i> <i class="fas fa-user"></i></p>
+                <p class="luggage">Luggage: 🧳 🧳 🧳 🧳 <small>💼 💼</small></p>
+                <p>Range: 222 mi *battery only</p>
+                </div>
             </div>
           </div>
         </div>
@@ -93,12 +99,12 @@
       </div>
     </div>
 
-    <div class="services" style="background-image: url({% static 'images/other-image-fullscren-1-1920x900.jpg' %})">
+    <div class="services" style="background-image: url(https://ibb.co/hDThy6X)">
       <div class="container">
         <div class="row">
           <div class="col-md-12">
             <div class="section-heading">
-              <h2>Latest blog posts</h2>
+              <h3>Latest blog posts</h3>
 
               <a href="blog.html">read more <i class="fa fa-angle-right"></i></a>
             </div>
