--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -25,14 +25,15 @@
           <div class="col-md-12">
             <div class="section-heading">
               <h2>Offers</h2>
-              <a href="offers.html">view more <i class="fa fa-angle-right"></i></a>
+              <a href="{% url 'index' %}">view more <i class="fa fa-angle-right"></i></a>
             </div>
           </div>
           <div class="col-md-4" style="max-width: 400px;">
             <div class="product-item">
-              <a href="offers.html"><img src="{% static 'images/2021-BMW-i3.jpeg' %}" alt=""></a>
+              <a href="cars/5"><img src="{% static 'images/2021-BMW-i3.jpeg' %}" alt=""></a>
+              <a href="cars/5" class="btn-book btn-float">Book Now</a>
               <div class="down-content">
-                <a href="offers.html"><h4>BMW i3</h4></a>
+                <a href="cars/6"><h4>BMW i3</h4></a>
                 <h6><small>only</small> $39 <small>per day</small></h6>
                 <p>Passengers: <i class="fas fa-user"></i> <i class="fas fa-user"></i> <i class="fas fa-user"></i> <i class="fas fa-user"></i></p>
                 <p class="luggage">Luggage: 🧳  <small>💼 💼</small></p>
@@ -43,9 +44,10 @@
           
           <div class="col-md-4" style="max-width: 400px;">
             <div class="product-item">
-              <a href="offers.html"><img src="{% static 'images/2021-Hyundai-Ioniq.jpeg' %}" alt=""></a>
+              <a href="cars/6"><img src="{% static 'images/2021-Hyundai-Ioniq.jpeg' %}" alt=""></a>
+              <a href="cars/6" class="btn-book btn-float">Book Now</a>
               <div class="down-content">
-                <a href="offers.html"><h4>Hyundai Ioniq</h4></a>
+                <a href="cars/6"><h4>Hyundai Ioniq</h4></a>
                 <h6><small>only</small> $49 <small>per day</small></h6>
                 <p>Passengers: <i class="fas fa-user"></i> <i class="fas fa-user"></i> <i class="fas fa-user"></i> <i class="fas fa-user"></i> <i class="fas fa-user"></i></p>
                 <p class="luggage">Luggage: 🧳 🧳  <small>💼 💼</small></p>
@@ -56,9 +58,10 @@
           
           <div class="col-md-4" style="max-width: 400px;">
             <div class="product-item">
-              <a href="offers.html"><img src="{% static 'images/2021-Audi-e-Tron.jpeg' %}" alt=""></a>
+              <a href="cars/7"><img src="{% static 'images/2021-Audi-e-Tron.jpeg' %}" alt=""></a>
+              <a href="cars/7" class="btn-book btn-float">Book Now</a>
               <div class="down-content">
-                <a href="offers.html"><h4>AUDI e-tron</h4></a>
+                <a href="cars/7"><h4>AUDI e-tron</h4></a>
                 <h6><small>only</small> $89 <small>per day</small></h6>
                 <p>Passengers: <i class="fas fa-user"></i> <i class="fas fa-user"></i> <i class="fas fa-user"></i> <i class="fas fa-user"></i> <i class="fas fa-user"></i></p>
                 <p class="luggage">Luggage: 🧳 🧳 🧳 🧳 <small>💼 💼</small></p>
