--- a/main_app/templates/about.html
+++ b/main_app/templates/about.html
@@ -17,34 +17,57 @@
   </div>
 </div>
 <div class="container">
-  <div class="text-content">
-    <h4>about usabout usabout us</h4>
-    <h2>our company</h2>
+
+  <div class="best-features">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="section-heading">
+            <h2>About Us</h2>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="left-content">
+            <p style="font-size: 16px;">Our company was created with two purposes in mind. For those who are concerned about our future and want to take care of the environment. Also, most people have never had contact with an electric car and are interested in buying one. Renting an electric car can be a good option to help buyers make a decision. You can go for a test drive, but a ride around the block will not tell you much.
+            </p>
+            </br>
+            <p style="font-size: 16px;">Electri<em style="color: #00cc00;">Cars</em>, the future is now!</p>
+            
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="right-image">
+            <img class="car-imgs" src="https://i.ibb.co/4MXykYg/Electri-Cars-co.png" alt="Electri-Cars-co" border="0">
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
-  <div class="text-content">
-    <h4>about us</h4>
-    <h2>our company</h2>
+
+  <div class="best-features">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          
+        </div>
+        
+        <div class="col-md-6">
+          <div class="float-left" style="float: left;" >
+            <img class="car-imgs" src="https://i.ibb.co/ctBvCsJ/electric-vehicles-2.jpg" alt="electric-vehicles-2" border="0" />
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="float-right" style="float: right;">
+            <p style="font-size: 16px;">We are commited to provide the best services and the best fleet to our customers. At ElectriCars everything we do is about giving you the freedom to discover more. We’ll move mountains to find you the right rental car, and bring you a smooth, hassle-free experience from start to finish. Here you sit and enjoy the ride</p>
+            </br>
+            <p style="font-size: 16px;">Electri<em style="color: #00cc00;">Cars</em>, the future is now!</p>
+            
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
-  <div class="text-content">
-    <h4>about us</h4>
-    <h2>our company</h2>
-  </div>
-  <div class="text-content">
-    <h4>about us</h4>
-    <h2>our company</h2>
-  </div>
-  <div class="text-content">
-    <h4>about us</h4>
-    <h2>our company</h2>
-  </div>
-  <div class="text-content">
-    <h4>about us</h4>
-    <h2>our company</h2>
-  </div>
-  <div class="text-content">
-    <h4>about us</h4>
-    <h2>our companyour companyour companyour company</h2>
-  </div>
+  
 </div>
 
 {% endblock %}
