--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -77,6 +77,7 @@
       <nav class="navbar navbar-expand-lg">
         <div class="container">
           <a class="navbar-brand" href="{% url 'home' %}"><h2>Electri<em>Cars</em></h2></a>
+          <img class="logo-car" src="https://i.ibb.co/XVmVKFs/electricar.png" alt="electricar" border="0">
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
