--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -93,7 +93,7 @@
           </div>
           <div class="col-md-6">
             <div class="right-image">
-              <img class="car-imgs" src="https://i.ibb.co/4MXykYg/Electri-Cars-co.png" alt="Electri-Cars-co" border="0">
+              <img class="car-imgs" style="max-width: 450px;" src="https://i.ibb.co/4MXykYg/Electri-Cars-co.png" alt="Electri-Cars-co" border="0">
             </div>
           </div>
         </div>
@@ -107,11 +107,11 @@
             <div class="inner-content">
               <div class="row">
                 <div class="col-md-8">
-                  <h4>Lorem ipsum dolor sit amet, consectetur adipisicing.</h4>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque corporis amet elite author nulla.</p>
+                  <h4><p style="font-size: 16px;">Electri<em style="color: #00cc00;">Cars</em>, the future is now!</p></h4>
+                  <p>We are commited to provide the best services and the best fleet to our customers. Always here for you!</p>
                 </div>
                 <div class="col-lg-4 col-md-6 text-right">
-                  <a href="contact.html" class="filled-button">Contact Us</a>
+                  <a href="contact" class="filled-button">Contact Us</a>
                 </div>
               </div>
             </div>
