--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -31,7 +31,7 @@
           <div class="col-md-4" style="max-width: 400px;">
             <div class="product-item">
               <a href="cars/5"><img src="{% static 'images/2021-BMW-i3.jpeg' %}" alt=""></a>
-              <a href="cars/5" class="btn-book btn-float">Book Now</a>
+              <a href="cars/5" style="margin-bottom: 30px;" class="btn-book btn-float">Book Now</a>
               <div class="down-content">
                 <a href="cars/6"><h4>BMW i3</h4></a>
                 <h6><small>only</small> $39 <small>per day</small></h6>
@@ -45,7 +45,7 @@
           <div class="col-md-4" style="max-width: 400px;">
             <div class="product-item">
               <a href="cars/6"><img src="{% static 'images/2021-Hyundai-Ioniq.jpeg' %}" alt=""></a>
-              <a href="cars/6" class="btn-book btn-float">Book Now</a>
+              <a href="cars/6" style="margin-bottom: 30px;" class="btn-book btn-float">Book Now</a>
               <div class="down-content">
                 <a href="cars/6"><h4>Hyundai Ioniq</h4></a>
                 <h6><small>only</small> $49 <small>per day</small></h6>
@@ -59,7 +59,7 @@
           <div class="col-md-4" style="max-width: 400px;">
             <div class="product-item">
               <a href="cars/7"><img src="{% static 'images/2021-Audi-e-Tron.jpeg' %}" alt=""></a>
-              <a href="cars/7" class="btn-book btn-float">Book Now</a>
+              <a href="cars/7" style="margin-bottom: 30px;" class="btn-book btn-float">Book Now</a>
               <div class="down-content">
                 <a href="cars/7"><h4>AUDI e-tron</h4></a>
                 <h6><small>only</small> $89 <small>per day</small></h6>
