--- a/main_app/templates/cars/index.html
+++ b/main_app/templates/cars/index.html
@@ -59,7 +59,11 @@
         </p>
         <p class="card-text">Range p/ charge: {{ car.erange }} miles</p>
         <p class="index-price" style="margin-top: 5px;">${{ car.price }} per/day</p>
+        {% if user.is_superuser %}
+        <a href="{% url 'detail' car.id %}" class="btn-book btn-float">Details</a>
+        {% else %}
         <a href="{% url 'detail' car.id %}" class="btn-book btn-float">Book Now</a>
+        {% endif %}
       </div>
     </div>
     {% else %}
