--- a/main_app/templates/cars/detail.html
+++ b/main_app/templates/cars/detail.html
@@ -16,7 +16,7 @@
 <div class="container">
 <h1>Car Details</h1>
 
-<div class="card" style="max-width: 1000px;">
+<div class="card">
   <div class="card-header">
     {% if user.is_superuser %}
     <div>
