--- a/main_app/templates/accounts/profile.html
+++ b/main_app/templates/accounts/profile.html
@@ -47,7 +47,7 @@
           <th>Drop-off</th>
           <th>Coverage</th>
           <th>Total</th>
-          <th>Cancel?</th>
+          <th>Cancelation</th>
         </tr>
       </thead>
       <tbody>
