contatc form update

--- a/main_app/templates/contact.html
+++ b/main_app/templates/contact.html
@@ -97,11 +97,11 @@
                     </li>
 
                     <li><i class="fas fa-phone mt-4 fa-2x"></i>
-                        <p>+ 01 234 567 89</p>
+                        <p>+1 (234) 567-8910</p>
                     </li>
 
                     <li><i class="fas fa-envelope mt-4 fa-2x"></i>
-                        <p>contact@email.com</p>
+                        <p>email@davidcibin.com</p>
                     </li>
                 </ul>
             </div>
