minor styling change for datepicker

--- a/main_app/templates/cars/detail.html
+++ b/main_app/templates/cars/detail.html
@@ -28,7 +28,9 @@
     {% else %}
     <div class="picker">
       <span class="range">Pick-Up</span>
-      <input type="text" id="range" value="01/01/2018 | 01/15/2018" />
+      <div class="input-group">
+        <input type="text" id="range" value="01/01/2018 | 01/15/2018" />
+      </div>
       <span class="range">Drop-Off</span>
     </div>
   </div>
