--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -118,7 +118,7 @@ body {
     border-radius: 5px;
 }
 #range {
-    width: auto;
+    width: 180px;
     border: none;
     margin-bottom: 0px;
     text-align-last: justify;
@@ -128,6 +128,7 @@ body {
 	background: #fff;
 }
 .range {
+	white-space: nowrap;
     width: auto;
     display: inline-table;
     margin-left: 10px;
